--- a/app/index.html
+++ b/app/index.html
@@ -38,10 +38,10 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
               <!-- //angularfire -->
-              <li><a ng-href="#/chat">chat</a></li>
               <li><a ng-href="#/calendar">calendar</a></li>
+              <li><a ng-href="#/chat">chat</a></li>
+              <li><a ng-href="#/clients">clients</a></li>
               <li>
               <a ng-hide-auth="" href="#/login">log in</a>
               <a ng-show-auth="" href="#/account">account</a>
@@ -106,6 +106,7 @@
         <script src="scripts/directives/ngHideAuth.js"></script>
         <script src="scripts\routes.js"></script>
         <script src="scripts/controllers/calendar.js"></script>
+        <script src="scripts/controllers/clients.js"></script>
         <!-- endbuild -->
 </body>
 </html>
